--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,50 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* COMMON */
+.flex{
+    display: flex;
+}
+.align-center{
+    align-items: center;
+}
+
+/* HEADER */
+.header{
+    height: 10vh;
+    width: 100%;
+    justify-content: space-between;
+}
+.hd-left img{
+    margin: 0 1rem;
+}
+#btn{
+    margin-right: 2rem;
+    padding: 0 2rem;
+}
+
+/* MAIN */
+.container{
+    height: 85vh;
+    width: 100%;
+    background-color:#7FFFD4;
+    justify-content: center;
+}
+.grid{
+    height: 700px;
+    width: 700px;
+    flex-wrap: wrap;
+}
+.box{
+    width: calc(100% / 10);
+    height: calc(100% / 10);
+    border: 1px solid black;
+}
+/* FOOTER */
+footer{
+    height: 5vh;
+}
+#sign{
+    margin-left: 1rem;
+    line-height: 5vh;
+}
