con l'aiuto della correzione ho terminato la base

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,12 @@
     width: calc(100% / 10);
     height: calc(100% / 10);
     border: 1px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.clicked{
+    background-color: blue;
 }
 /* FOOTER */
 footer{
